--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,26 +1,40 @@
-{% extends 'portfolio/base.html' %}
+{% extends "portfolio/base.html" %}
 
+{% load static %}
 
 {% block content %}
 
-    <h1>This is home page</h1>
+<div class="row justify-content-center my-3">
+  <div class="col-5">
+    <img src="{% static 'portfolio/Mainimage.jpg' %}" class="img-fluid" alt="image">
+  </div>
+</div>
 
-    {% load static %}
+<div class="row justify-content-center mb-3">
+  <div class="col-md-9 text-center">
+    <h1 id="hometext" class="font-weight-bold">Hi I am Vignesh... Call me Vicky111 and thats my username (❁´◡`❁)😊</h1>
+  </div>
+</div>
 
-    <a href="{% url 'blog:all_blogs' %}">Blog</a>
-<br>
-    <a href="{% static 'portfolio/Oreilly UIUX 2hrdesigncourseslides20221690399664767.pdf' %}">Resume</a>
-<br>
-    <img src="{% static 'portfolio/reddress.jpg' %}" alt="This is img" height=580 width=360>
-<br>
-    {% for project in projects %}
-        <h2>{{  project.title }}</h2>
-        <p>{{  project.description }}</p>
-        <img src="{{  project.image.url }}" alt="This is the first image" height=80 width=60>
-        {% if project.url %}
-        <i>#If u provide link during the creation of image in django it'll appear</i>
-        <a href="{{ project.url }}" >Link</a>
-        {% endif %}
-    {% endfor %}
+<h2 class="mt-5">Portfolio</h2>
+<hr>
+<div class="row">
+  {% for project in projects %}
+  <div class="col-lg-4 col-md-6">
+
+    {% if project.url %}
+    <a href="{{ project.url }}">
+      <img src="{{ project.image.url }}" class="img-fluid mb-2" alt="image">
+    </a>
+    {% else %}
+
+    <img src="{{ project.image.url }}" class="img-fluid mb-2" alt="image">
+    {% endif %}
+    <h3>{{ project.title }}</h3>
+    <p>{{ project.description }}</p>
+
+  </div>
+  {% endfor %}
+</div>
 
 {% endblock %}
